# bakalib

./: Cargo.toml
src/: input.rs  lib.rs  timeout.rs
src/command/: mod.rs
src/extensions/: mod.rs  string.rs
src/io/: mod.rs  read.rs  send.rs
src/lagerung/: mod.rs
src/protoutils/: message.rs
src/socket/: mod.rs  server.rs  socket.rs
src/utils/: arc.rs  mod.rs  mutex.rs
