[package]
name = "bakalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
bakaproto = { version = "0.1.0", path = "../bakaproto" }
protobuf = "3.1.0"
regex = "1"
